ref #7726 Enable git-lfs for UI screenshots

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
+tests/UI/expected-screenshots/*.png filter=lfs diff=lfs merge=lfs -crlf
+
 # auto detect text files and perform LF normalization
 * text eol=lf
 
