--- a/.travis.yml
+++ b/.travis.yml
@@ -87,6 +87,7 @@ script: $PIWIK_ROOT_DIR/tests/travis/travis.sh
 before_install:
   # do not use the Zend allocator on PHP 5.3 since it will randomly segfault after program execution
   - '[[ "$TRAVIS_PHP_VERSION" == 5.3* ]] && export USE_ZEND_ALLOC=0 || true'
+  - ./tests/travis/install_git_lfs.sh
 
 install:
   - git fetch -q
